c4prj2_input/grade.txt
Grading at Wed Dec 25 13:53:04 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:36:13: error: expected ‘;’ before ‘l’
   free(card)l
             ^
input.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
